[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/SpaceBackground.png" type="Texture" id=1]
[ext_resource path="res://Resources/Themes/ButtonTheme.tres" type="StyleBox" id=2]
[ext_resource path="res://Menu/LevelsMenu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Buttons/Scenes/BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/Fuentes/Kenney Pixel.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Resources/Fuentes/Kenney Pixel.ttf"

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 28
extra_spacing_char = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 28
extra_spacing_char = 1
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.036
anchor_right = 0.5
anchor_bottom = 0.036
margin_left = -208.0
margin_right = 208.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "Selecciona un nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 620.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 860.0
margin_bottom = 500.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/ScrollContainer"]
margin_right = 840.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 1 )
centered = false

[node name="BackButton" parent="." instance=ExtResource( 5 )]
margin_left = 104.0
margin_top = 40.0
margin_right = 172.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 4 )

[node name="Comunity" parent="." instance=ExtResource( 5 )]
margin_left = 872.0
margin_top = 40.0
margin_right = 985.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 5 )
text = "Comunidad"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Comunity" to="." method="_on_Comunity_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
